k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: mangeshbonde/nginx-co:v2
        ports:
        - containerPort: 80
