k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginxcc
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
